# Bublick

./: .black  .env  .flake8  .gitignore  .isort.cfg  main.py  pyproject.toml
app/: config.py  db.py  logging.py  main.py  models.py
db/: app_db.sqlite3
