[project]
name = "bublick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "environs>=14.1.1",
    "fastapi>=0.115.12",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "pre-commit>=4.2.0",
    "uvicorn>=0.34.0",
]
